LG-140 Swaps border for box-shadow to prevent content shifting on hover

--- a/web/themes/custom/lex/scss/molecules/_card_button.scss
+++ b/web/themes/custom/lex/scss/molecules/_card_button.scss
@@ -1,6 +1,6 @@
 .card-button {
   background-color: color(white);
-  border: 1px solid color(med-blue);
+  box-shadow: 0 0 0 1px color(med-blue);
   color: color(med-blue);
   display: block !important;
   width: 225px;
